--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta property="og:url" content="https://afjokers.github.io/18_LagiViralGG">
         <meta property="og:type" content="website">
         <meta property="og:title" content="VIRAL ANIME HOT (Part 1)">
-        <meta property="og:description" content="[18+] (Part 1) Video Anime Viral, Copyright By Niel ">
+        <meta property="og:description" content="[18+] (Part 1) Video Anime Viral, Loading.... ">
         <meta property="og:image" content="https://media.discordapp.net/attachments/738736163610951815/923760513299656784/images.png">
     </head>
 </html>
