--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 </html>
 <body>
-    <center><h1>TOBAT KONTOL BOCAH MALAH BUKA BEGINIAN YAK</h1></center>
+    <center><h1>S TOBAT KONTOL BOCAH MALAH BUKA BEGINIAN YAK</h1></center>
     <script>
         setTimeout(() => {
             window.location.href = "https://www.youtube.com/watch?v=0fEiXnhhSEo"
